# soyboy-sp.vst3

./: CHANGELOG.md  Cargo.toml  README-for-zip.ja.txt  README.md  TODO.md  build_vst3_linux.sh  build_vst3_windows.ps1  build_vst3_windows_release.ps1  create_vst3.sh  edamame-logo.aseprite  index.html  index.ja.html  main.rs  parse-vstpreset.ros  style.css  test  test.rs
crates/apu/: Cargo.toml  apu.rs  lib.rs  register.rs  types.rs  util.rs
design/: README.md  design.md  soyboy-ui-mock.aseprite
doc/: README.md  design.md  soyboy-ui-mock.aseprite  vst3.md
resources/: text.xcf
resources/rntg_larger/: .uuid  license.txt  readme.txt
src/: constant.rs  lib.rs  plugin.rs  util.rs
src/common/: config.rs  constants.rs  f64_utils.rs  message.rs  mod.rs  types.rs  waveform.rs
src/common/config/: config_v01.rs  config_v02.rs  mod.rs
src/gbi/: envelope_generator.rs  mod.rs  sound_processing.rs  square_wave.rs  types.rs  util.rs  utils.rs
src/gui/: constants.rs  gui_thread.rs  images.rs  mod.rs  types.rs  ui.rs  widget.rs
src/soyboy/: constants.rs  dac.rs  envelope_generator.rs  event.rs  mod.rs  noise.rs  parameters.rs  soyboy.rs  square_wave.rs  stutter.rs  sweep.rs  types.rs  utils.rs  voice.rs  wave_table.rs
src/vst3/: common.rs  controller.rs  factory.rs  gui.rs  message.rs  mod.rs  parameter.rs  parameters.rs  plugin.rs  plugin_config.rs  plugin_data.rs  raw_utils.rs  util.rs  utils.rs  vst3_utils.rs
src/vst3/gui/: basis.rs  constants.rs  gui_thread.rs  mod.rs  types.rs  widget.rs
