[package]
name = "soyboy-sp"
version = "0.5.0"
authors = ["t-sin <shinichi.tanaka45@gmail.com>"]
edition = "2021"
description = "A VST3 instrument to make some chiptunes"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]

[dependencies]
# workarround for create_instance:
#  https://github.com/RustAudio/vst3-sys/pull/49
vst3-sys = { git = "https://github.com/t-sin/vst3-sys", branch = "fix/signature-create-instance" }
vst3-com = { git = "https://github.com/t-sin/vst3-sys", branch = "fix/signature-create-instance" }

# workarround for parent window
#  https://github.com/rust-windowing/winit/pull/2246
egui_glow = { git = "https://github.com/t-sin/egui" }
glutin = { git = "https://github.com/t-sin/glutin" }

egui_extras = { git = "https://github.com/t-sin/egui", features = ["image"] }
image = { version = "0.24", features = ["png"] }

num = "0.4.0"
rand = "0.8.4"
widestring = "0.4.0"
