[package]
name = "soyboy-sp"
version = "1.0.2"
authors = ["t-sin <shinichi.tanaka45@gmail.com>"]
edition = "2021"
description = "A VST3 instrument to make some chiptunes"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]

[dependencies]
vst3-sys = { version = "0.1.0", git = "https://github.com/RustAudio/vst3-sys" }
vst3-com = { version = "0.1.0", git = "https://github.com/RustAudio/vst3-sys" }

# workarround for parent window
#  https://github.com/rust-windowing/winit/pull/2246
egui_glow = { git = "https://github.com/t-sin/egui" }
glutin = { git = "https://github.com/t-sin/glutin" }

egui_extras = { git = "https://github.com/t-sin/egui", features = ["image"] }
image = { version = "0.24", features = ["png"] }

bincode = "1.3.3"
serde = "1.0.137"

num = "0.4.0"
rand = "0.8.4"
widestring = "0.4.0"

log = "0.4.17"
simplelog = "0.12.0"
